# gravewright

./: .dockerignore  .env.development  .env.example  .env.production  .env.production-sqlite  .env.staging  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  Gravewright.spec  LICENSE  LICENSE-API.md  NOTICE  ORG_PROFILE_README.md  README.md  README_CLI_BUNDLE.md  RELEASE_v1.0.0-alpha.1.md  RELEASE_v2.1.0-alpha.md  SECURITY.md  desktop.py  docker-compose.yml  grave  grave.bat  grave.spec  grave_launcher.py  install-local-launcher.sh  install-macos-linux.sh  install-windows.bat  main.py  pyproject.toml  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
app/: config.py  routes.py
docs/: README.md  alpha.md  architecture.md  configuration.md  database.md  deployment.md  desktop-distribution.md  development.md  docker-tests.md  getting-started.md  licensing.md  modules.md  operations.md  publication-checklist.md  security.md  storage.md  testing.md
examples/: README.md
migrations/: env.py
schemas/: gravewright-card-deck-v1.schema.json  gravewright-card-event-v1.schema.json  gravewright-package-v1.schema.json  system-actions-v1.schema.json  system-combat-v1.schema.json  system-layout-v1.schema.json  system-manifest-v1.schema.json
scripts/: generate_sdk_reference.py  setup_local_env.py  validate_json.py
tests/: conftest.py  docker-compose.browser-bench.yml  docker-compose.chunk-stream.yml  docker-compose.i5-stress.yml  docker-compose.max-stress.yml  docker-compose.perf.yml  docker-compose.ws-live.yml  docker-compose.ws-session.yml  docker-compose.ws-stress.yml  run_browser_bench.sh  run_chunk_stream_test.bat  run_chunk_stream_test.sh  run_i5_stress.bat  run_i5_stress.ps1  run_i5_stress.sh  run_locust_performance.bat  run_locust_performance.ps1  (+11 more)
(+1713 files in other folders)
